--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+    <head>
+        <meta charset="utf-8" />
+        <title>wunderlust</title>
+    </head>
+    <body>
+        <h1>Wunderlust Travel</h1>
+
+        <p>Let Wunderlust Travel help you plan the trip of your dreams</p>
+        <nav>
+            <ul>
+                <li><a href="/destinations">Destinations</a></li>
+                <li><a href="/inspirations">Inspirations</a></li>
+                <li><a href="/special">Specials</a></li>
+                <li><a href="/contact">Contact Us</a></li>
+            </ul>
+        </nav>
+    </body>
 </html>
