--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
         <title>wunderlust</title>
     </head>
     <body>
+        <header>
+        <a class="skip-link" href='#main'>Skip to content</a>
         <h1>Wunderlust Travel</h1>
-
+        <img 
+            src="logo-S.png"
+            alt="logo graphic of palm trees, water and sun in the back" 
+            srcset="logo-S.png 320w, logo-M.png 780w, logo-L.png 1024w"
+            sizes="70vmin"
+            >
         <p>Let Wunderlust Travel help you plan the trip of your dreams</p>
         <nav>
             <ul>
@@ -16,5 +23,290 @@
                 <li><a href="/contact">Contact Us</a></li>
             </ul>
         </nav>
+        </header>
+        <main>
+            <hgroup>
+                <h2>Majorca</h2>
+                <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
+            </hgroup>
+            <img
+                src="majorca-waves-S.png"
+                srcset="majorca-waves-S.png 320w, majorca-waves-M.png 780w, majorca-waves-L.png 1024w" 
+                sizes="70vmin"
+                alt="body of water showing waves">
+             />
+             <img
+             src="majorca-beach-S.png"
+             srcset="majorca-beach-S.png 320w, majorca-beach-M.png 780w, majorca-beach-L.png 1024w"
+             sizes="70vmin"
+             alt="beach showing body of water with rocky surroundings"
+             />
+             <img
+                src="majorca-cove-S.png"
+                srcset="majorca-cove-S.png 320w, majorca-cove-M.png 780w, majorca-cove-L.png 1024w"
+                sizes="70vmin"
+                alt="body of water surrounded by greenery and rock"
+                />
+            <h3>Plan Your Trip</h3>
+                <section>    
+                <h4>How to Get there</h4>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plane" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z" />
+                  </svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <polyline points="9 6 15 12 9 18" />
+                  </svg>
+                  </section>
+                  <section>
+                    <h4>Places to Stay</h4>
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bed" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6" />
+                    <circle cx="7" cy="10" r="1" />
+                  </svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <polyline points="9 6 15 12 9 18" />
+                  </svg>
+                  </section>
+                  <section>
+                    <h4>Things to do</h4>
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-sailboat" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M2 20a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1" />
+                    <path d="M4 18l-1 -3h18l-1 3" />
+                    <path d="M11 12h7l-7 -9v9" />
+                    <line x1="8" y1="7" x2="6" y2="12" />
+                  </svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <polyline points="9 6 15 12 9 18" />
+                  </svg>
+                  </section>
+                  <section>
+                    <h4>Where to Eat</h4>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen-2" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M19 3v12h-5c-.023 -3.681 .184 -7.406 5 -12zm0 12v6h-1v-3m-10 -14v17m-3 -17v3a3 3 0 1 0 6 0v-3" />
+                  </svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <polyline points="9 6 15 12 9 18" />
+                  </svg>
+                  </section>
+                  <h2>Testimonials</h2>
+                    <section>
+                    <h4>Miranda Blake</h4>
+                    <img
+                        src="miranda-blake-S.png"
+                        srcset="miranda-blake-S.png 320w, miranda-blake-M.png 780w, miranda-blake-L.png 1024w"
+                        sizes="70vmin"
+                        alt="headshot of miranda blake wearing sunglasses"
+                    />
+                    <p>Traveling From: London, England</p>
+                    <blockquote>I traveled her for business, but my stay was extended. Now it is my home.</blockquote>
+                    </section>
+                    <section>
+                        <h4>Max Winter</h4>
+                        <img
+                            src="max-winter-S.png"
+                            srcset="max-winter-S.png 320w, max-winter-M.png 780w, max-winter-L.png 1024w"
+                            sizes="70vmin"
+                            alt="professional headshot of max winter"
+                        />
+                        <p>Traveling From: Berlin, Germany</p>
+                        <blockquote>Great escape from my reality. Beautiful sunsets, wonderful people, great beer.</blockquote>
+                    </section>
+                    <section>
+                        <h4>Inés Villegoes</h4>
+                        <img
+                            src="ines-villegoes-S.png"
+                            srcset="ines-villegoes-S.png 320w, ines-villegoes-M.png 780w, ines-villegoes-L.png 1024w"
+                            sizes="70vmin"
+                            alt="professional headshot of Inés Villegoes"
+                            />
+                            <p>Traveling From: Barcelona, Spain</p>
+                            <blockquote>A very safe environment for all travelers</blockquote>
+                    </section>
+                    <section>
+                        <h4>Carmen Lorenzo</h4>
+                        <img
+                            src="carmen-lorenzo-S.png"
+                            srcset="carmen-lorenzo-S.png 320w, carmen-lorenzo-M.png 780w, carmen-lorenzo-L.png 1024w"
+                            sizes="70vmin"
+                            alt="professional headshot of carmen lorenzo with a gray backdrop"
+                            />
+                            <p>Traveling From: Madrid, Spain</p>
+                            <blockquote>Live, laugh, love -- everything you need in Majorca.</blockquote>
+                    </section>
+                    <h2>About Your Destination</h2>
+                    <section>
+                        <h4>Size</h4>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-ruler-2" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <path d="M17 3l4 4l-14 14l-4 -4z" />
+                            <path d="M16 7l-1.5 -1.5" />
+                            <path d="M13 10l-1.5 -1.5" />
+                            <path d="M10 13l-1.5 -1.5" />
+                            <path d="M7 16l-1.5 -1.5" />
+                          </svg>
+                          <p>Size: 1,405 miles squared</p>
+                    </section>
+                    <section>
+                        <h4>Elevation</h4>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-top-bar" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <line x1="12" y1="21" x2="12" y2="3" />
+                            <path d="M15 6l-3 -3l-3 3" />
+                            <line x1="9" y1="21" x2="15" y2="21" />
+                          </svg>
+                          <p>Elevation: 4,741 feet</p>                          
+                    </section>
+                    <section>
+                        <h4>Location</h4>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <circle cx="12" cy="11" r="3" />
+                            <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+                          </svg>
+                          <p>Location: Mediterranean</p>
+                    </section>
+                    <section>
+                        <h4>Population</h4>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <circle cx="9" cy="7" r="4" />
+                            <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
+                            <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+                            <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
+                          </svg>
+                          <p>Population: 923, 608</p>
+                    </section>
+        </main>
+        <footer>
+            <h2>Contact Us</h2>
+            <form>
+                <div>
+                    <label for="first-name">First Name</label>
+                    <input
+                        id="first-name"
+                        name="first-name"
+                        type="text"
+                        placeholder="Enter first name"
+                        required
+                        aria-required="true"
+                        />
+                </div>
+                <div>
+                    <label for="last-name">Last Name</label>
+                    <input
+                        id="last-name"
+                        name="last-name"
+                        type="text"
+                        placeholder="Enter last name"
+                        required
+                        aria-required="true"
+                        />
+                </div>
+                <div>
+                    <fieldset>
+                        <legend>Contact Method</legend>
+                        <label>
+                            <input
+                                type="radio"
+                                name="radio"
+                                value="Email"
+                                required
+                                aria-required="true"
+                                />
+                        Phone</label>
+                        <label>
+                            <input
+                                type="radio"
+                                name="radio"
+                                value="text"
+                                required
+                                aria-required="true"
+                                />
+                        Text</label>
+                        <label>
+                            <input  
+                                type="radio"
+                                name="radio"
+                                value="phone"
+                                required
+                                aria-required="true"
+                                />
+                        Phone</label>
+                    </fieldset>
+                </div> 
+                <div>
+                    <label for="email">Email</label>
+                    <input
+                        id="email"
+                        name="email"
+                        type="email"
+                        placeholder="Enter email"
+                        required
+                        aria-required="true"
+                        />
+                </div> 
+                <div>
+                    <label for="phone">Phone</label>
+                    <input
+                        id="phone"
+                        name="phone"
+                        type="tel"
+                        placeholder="Enter telephone number"
+                        required
+                        aria-required="true"
+                        />
+                </div>
+                <div>
+                    <label>Destinations
+                        <input
+                            name="destination"
+                            list="destinations"
+                            required
+                            aria-required="true"
+                            />
+                            <datalist id="destinations">
+                                <option value="Barcelona"></option>
+                                <option value="Granada"></option>
+                                <option value="Ibiza"></option>
+                                <option value="Madrid"></option>
+                                <option value="Majorca"></option>
+                                <option value="Seville"></option>
+                                <option value="Tenerife"></option>
+                                <option value="Valencia"></option>
+                        </datalist>
+                        </label>
+                </div>
+                <div>
+                    <label>Travel Time
+                        <input
+                            name="travel-time"
+                            list="travel-times"
+                            required
+                            aria-required="true"
+                            />
+                            <datalist id="travel-times">
+                                <option value="Fall"></option>
+                                <option value="Winter"></option>
+                                <option value="Spring"></option>
+                                <option value="Summer"></option>
+                                <option value="Flexible"></option>
+                            </datalist>
+                    </label>
+                </div>                   
+            </form>
+            <hgroup>
+                <p>Copyright 2021 Wunderlust</p>
+                <p>Privacy Statement</p>
+                <p>Terms of Service</p>
+            </hgroup>
+        </footer>
     </body>
 </html>
